# backend/test-system/src/review/dto/create-review.dto.ts
@@ -1,0 +1,1 @@
+export class CreateReviewDto {}
